--- a/index.html
+++ b/index.html
@@ -486,12 +486,13 @@
 
                 <option>India</option>
                 <option>USA</option>
-                <option>Japan</option>
-                <option>France</option>
-                <option>South Africa</option>
+                <option>Srilanka</option>
+                <option>Hongkong</option>
+                <option>Singapore</option>
                 <option>Dubai</option>
                 <option>Thailand</option>
-                <option>England</option>
+                <option>Thaiwan</option>
+                <option>Bangladesh</option>
             </select>
 
             <div class="icons">
